# cursor-skin-manager

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  cursor-skin-manager-mvp.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cursor_compatibility.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  COMMUNITY_RELEASE_ACCEPTANCE.md  DATA_FORMAT.md  DEVELOPMENT.md  MVP优化步骤.md  RELEASING.md  THIRD_PARTY_LICENSES.md  品牌图标规范.md  版本管理.md  社区开源建设执行步骤.md
docs/licenses/: cargo.md  npm.md
scripts/: generate-icon.ps1  generate-third-party-licenses.mjs  release-tools.mjs  release-tools.test.mjs  release.mjs
src/: main.test.tsx  main.tsx  quality-gate-probe.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: ci_failure_probe.rs
